--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,23 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+ background-color: rgb(21, 21, 21);
   font-family: Arial, Helvetica, sans-serif;
 }
+
 
 .global-w {
   width: 80%;
