feat:create mobile menu & Large menu & responsive

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,9 @@ body {
  background-color: rgb(21, 21, 21);
   font-family: Arial, Helvetica, sans-serif;
 }
-
+hr{
+  border-color: rgb(49, 47, 47)!important;
+}
 
 .global-w {
   width: 80%;
